--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,21 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
+        "ext-pdo": "*",
+        "php": "^8.1",
+        "althinect/filament-spatie-roles-permissions": "^1.2",
+        "filament/filament": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "jeffgreco13/filament-breezy": "^1.5",
         "laravel/framework": "^10.10",
+        "laravel/horizon": "*",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/slack-notification-channel": "^2.5",
+        "laravel/tinker": "^2.8",
+        "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
+        "doctrine/dbal": "^3.6",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
@@ -27,6 +35,9 @@
             "Database\\Seeders\\": "database/seeders/"
         }
     },
+    "post-update-cmd": [
+        "@php artisan filament:upgrade"
+    ],
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
