--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,13 @@
         "laravel/horizon": "*",
         "laravel/sanctum": "^3.2",
         "laravel/slack-notification-channel": "^2.5",
+        "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.8",
+        "socialiteproviders/facebook": "^4.1",
         "spatie/laravel-activitylog": "^4.7",
-        "spatie/laravel-permission": "^5.10"
+        "spatie/laravel-data": "^3.6",
+        "spatie/laravel-permission": "^5.10",
+        "spatie/url": "^2.2"
     },
     "require-dev": {
         "doctrine/dbal": "^3.6",
